fix long comment jumping under avatar by using flex: 1 for comment-content

--- a/css/comments.css
+++ b/css/comments.css
@@ -28,6 +28,7 @@
 }
 #gh-comments-list li .comment-content {
     padding: 0 1.5em;
+    flex: 1;
 }
 #gh-comments-list li>a.user img {
     max-width: 100%;
